{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 233,
  "lineage": "d23a69ca-aa90-cd46-56d1-f52560a4701c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0931d593af76da5b2",
            "arn": "arn:aws:ec2:ap-southeast-1:981629166163:elastic-ip/eipalloc-0931d593af76da5b2",
            "association_id": "eipassoc-0192e6cc1e092ded0",
            "domain": "vpc",
            "id": "eipalloc-0931d593af76da5b2",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0a9bec7ef72b96e02",
            "private_dns": "ip-10-0-1-174.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.174",
            "public_dns": "ec2-18-138-172-121.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.138.172.121",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-nat-eip",
              "Project": "need-a-sidekick"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-nat-eip",
              "Project": "need-a-sidekick"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:981629166163:internet-gateway/igw-0bdb6518295c94caa",
            "id": "igw-0bdb6518295c94caa",
            "owner_id": "981629166163",
            "region": "ap-southeast-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-igw",
              "Project": "need-a-sidekick"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-igw",
              "Project": "need-a-sidekick"
            },
            "vpc_id": "vpc-08221316b975101bd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:981629166163:loadbalancer/app/need-a-sidekick-dev-alb/84b1d47b01907e93",
            "arn_suffix": "app/need-a-sidekick-dev-alb/84b1d47b01907e93",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "need-a-sidekick-dev-alb-454776175.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:981629166163:loadbalancer/app/need-a-sidekick-dev-alb/84b1d47b01907e93",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "need-a-sidekick-dev-alb",
            "preserve_host_header": false,
            "region": "ap-southeast-1",
            "security_groups": [
              "sg-032986182c559e2b6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ce5334966df14eb1"
              },
              {
                "subnet_id": "subnet-0dbed88dc6a394a1a"
              }
            ],
            "subnets": [
              "subnet-0ce5334966df14eb1",
              "subnet-0dbed88dc6a394a1a"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-alb",
              "Project": "need-a-sidekick"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-alb",
              "Project": "need-a-sidekick"
            },
            "vpc_id": "vpc-08221316b975101bd",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:981629166163:loadbalancer/app/need-a-sidekick-dev-alb/84b1d47b01907e93"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:981629166163:listener/app/need-a-sidekick-dev-alb/84b1d47b01907e93/5a3208fab935453a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:981629166163:targetgroup/need-a-sidekick-dev-tg/6c97276f05968b8b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:981629166163:listener/app/need-a-sidekick-dev-alb/84b1d47b01907e93/5a3208fab935453a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:981629166163:loadbalancer/app/need-a-sidekick-dev-alb/84b1d47b01907e93",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-southeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:981629166163:listener/app/need-a-sidekick-dev-alb/84b1d47b01907e93/5a3208fab935453a"
          },
          "dependencies": [
            "aws_lb.this",
            "aws_lb_target_group.backend",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:981629166163:targetgroup/need-a-sidekick-dev-tg/6c97276f05968b8b",
            "arn_suffix": "targetgroup/need-a-sidekick-dev-tg/6c97276f05968b8b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:981629166163:targetgroup/need-a-sidekick-dev-tg/6c97276f05968b8b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:981629166163:loadbalancer/app/need-a-sidekick-dev-alb/84b1d47b01907e93"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "need-a-sidekick-dev-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-backend-tg",
              "Project": "need-a-sidekick"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-backend-tg",
              "Project": "need-a-sidekick"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08221316b975101bd"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:981629166163:targetgroup/need-a-sidekick-dev-tg/6c97276f05968b8b"
          },
          "dependencies": [
            "aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0931d593af76da5b2",
            "association_id": "eipassoc-0192e6cc1e092ded0",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-06cde8b6b5d1491ab",
            "network_interface_id": "eni-0a9bec7ef72b96e02",
            "private_ip": "10.0.1.174",
            "public_ip": "18.138.172.121",
            "region": "ap-southeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dbed88dc6a394a1a",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-nat",
              "Project": "need-a-sidekick"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-nat",
              "Project": "need-a-sidekick"
            },
            "vpc_id": "vpc-08221316b975101bd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:981629166163:route-table/rtb-0c38cbe8014e53276",
            "id": "rtb-0c38cbe8014e53276",
            "owner_id": "981629166163",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06cde8b6b5d1491ab",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-private-app-rt",
              "Project": "need-a-sidekick"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-private-app-rt",
              "Project": "need-a-sidekick"
            },
            "timeouts": null,
            "vpc_id": "vpc-08221316b975101bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "981629166163",
            "id": "rtb-0c38cbe8014e53276",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:981629166163:route-table/rtb-0f78bbe0adbba0989",
            "id": "rtb-0f78bbe0adbba0989",
            "owner_id": "981629166163",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-private-data-rt",
              "Project": "need-a-sidekick"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-private-data-rt",
              "Project": "need-a-sidekick"
            },
            "timeouts": null,
            "vpc_id": "vpc-08221316b975101bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "981629166163",
            "id": "rtb-0f78bbe0adbba0989",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:981629166163:route-table/rtb-04fea9ebff011e76d",
            "id": "rtb-04fea9ebff011e76d",
            "owner_id": "981629166163",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bdb6518295c94caa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-public-rt",
              "Project": "need-a-sidekick"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-public-rt",
              "Project": "need-a-sidekick"
            },
            "timeouts": null,
            "vpc_id": "vpc-08221316b975101bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "981629166163",
            "id": "rtb-04fea9ebff011e76d",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ea2448555952489",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0c38cbe8014e53276",
            "subnet_id": "subnet-059b439598c0d358d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private_app",
            "aws_subnet.private_app",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef7521515dd6577f",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0c38cbe8014e53276",
            "subnet_id": "subnet-0cf37672b89b06a40"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private_app",
            "aws_subnet.private_app",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047f0002598899d75",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0f78bbe0adbba0989",
            "subnet_id": "subnet-094ec38a2eec57f5b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_data",
            "aws_subnet.private_data",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b773ec4901adbadb",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0f78bbe0adbba0989",
            "subnet_id": "subnet-037dfc54c6d1b7df8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_data",
            "aws_subnet.private_data",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058362d92d82f1fcd",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-04fea9ebff011e76d",
            "subnet_id": "subnet-0dbed88dc6a394a1a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab7f50958b694c23",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-04fea9ebff011e76d",
            "subnet_id": "subnet-0ce5334966df14eb1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:981629166163:security-group/sg-032986182c559e2b6",
            "description": "Security group for the internet-facing ALB",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "To backend app port",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-049228b7e7a2447f4"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "id": "sg-032986182c559e2b6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "need-a-sidekick-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "981629166163",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-alb-sg",
              "Project": "need-a-sidekick"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-alb-sg",
              "Project": "need-a-sidekick"
            },
            "timeouts": null,
            "vpc_id": "vpc-08221316b975101bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "981629166163",
            "id": "sg-032986182c559e2b6",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:981629166163:security-group/sg-049228b7e7a2447f4",
            "description": "Security group for backend EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "DNS TCP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "DNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS egress",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Redis",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-004bf20f578147b4d"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "id": "sg-049228b7e7a2447f4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "App traffic from ALB",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-032986182c559e2b6"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "need-a-sidekick-dev-backend-sg",
            "name_prefix": "",
            "owner_id": "981629166163",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-backend-sg",
              "Project": "need-a-sidekick"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-backend-sg",
              "Project": "need-a-sidekick"
            },
            "timeouts": null,
            "vpc_id": "vpc-08221316b975101bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "981629166163",
            "id": "sg-049228b7e7a2447f4",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:981629166163:security-group/sg-004bf20f578147b4d",
            "description": "Security group for ElastiCache Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004bf20f578147b4d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis from backend",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-049228b7e7a2447f4"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "need-a-sidekick-dev-redis-sg",
            "name_prefix": "",
            "owner_id": "981629166163",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-redis-sg",
              "Project": "need-a-sidekick"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-redis-sg",
              "Project": "need-a-sidekick"
            },
            "timeouts": null,
            "vpc_id": "vpc-08221316b975101bd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "981629166163",
            "id": "sg-004bf20f578147b4d",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_egress_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "To backend app port",
            "from_port": 8000,
            "id": "sgrule-1521439888",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-1",
            "security_group_id": "sg-032986182c559e2b6",
            "security_group_rule_id": "sgr-0c830f6b20b2ef842",
            "self": false,
            "source_security_group_id": "sg-049228b7e7a2447f4",
            "timeouts": null,
            "to_port": 8000,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.backend",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-2486138381",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-1",
            "security_group_id": "sg-032986182c559e2b6",
            "security_group_rule_id": "sgr-0cabce328bdbbf729",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_egress_dns_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "DNS TCP",
            "from_port": 53,
            "id": "sgrule-3861640277",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-1",
            "security_group_id": "sg-049228b7e7a2447f4",
            "security_group_rule_id": "sgr-05c1378f0144eedc6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.backend",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_egress_dns_udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "DNS UDP",
            "from_port": 53,
            "id": "sgrule-2562052440",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "region": "ap-southeast-1",
            "security_group_id": "sg-049228b7e7a2447f4",
            "security_group_rule_id": "sgr-0fc29082c7da00330",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.backend",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_egress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS egress",
            "from_port": 443,
            "id": "sgrule-2975612116",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-1",
            "security_group_id": "sg-049228b7e7a2447f4",
            "security_group_rule_id": "sgr-01e87a6d58f6aed07",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.backend",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_egress_redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Redis",
            "from_port": 6379,
            "id": "sgrule-1626747033",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-1",
            "security_group_id": "sg-049228b7e7a2447f4",
            "security_group_rule_id": "sgr-04e76d28c40952d46",
            "self": false,
            "source_security_group_id": "sg-004bf20f578147b4d",
            "timeouts": null,
            "to_port": 6379,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.backend",
            "aws_security_group.redis",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_ingress_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "App traffic from ALB",
            "from_port": 8000,
            "id": "sgrule-3353337952",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-1",
            "security_group_id": "sg-049228b7e7a2447f4",
            "security_group_rule_id": "sgr-0d52e7399d09af44c",
            "self": false,
            "source_security_group_id": "sg-032986182c559e2b6",
            "timeouts": null,
            "to_port": 8000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.backend",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "redis_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All egress",
            "from_port": 0,
            "id": "sgrule-2127701239",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-southeast-1",
            "security_group_id": "sg-004bf20f578147b4d",
            "security_group_rule_id": "sgr-05ba8453983ec3dee",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.redis",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "redis_ingress_from_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Redis from backend",
            "from_port": 6379,
            "id": "sgrule-2336482734",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-1",
            "security_group_id": "sg-004bf20f578147b4d",
            "security_group_rule_id": "sgr-0006a549ebbc9b8ff",
            "self": false,
            "source_security_group_id": "sg-049228b7e7a2447f4",
            "timeouts": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.backend",
            "aws_security_group.redis",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:981629166163:subnet/subnet-059b439598c0d358d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059b439598c0d358d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "981629166163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-private-app-ap-southeast-1a",
              "Project": "need-a-sidekick",
              "Tier": "private-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-private-app-ap-southeast-1a",
              "Project": "need-a-sidekick",
              "Tier": "private-app"
            },
            "vpc_id": "vpc-08221316b975101bd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "981629166163",
            "id": "subnet-059b439598c0d358d",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:981629166163:subnet/subnet-0cf37672b89b06a40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf37672b89b06a40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "981629166163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-private-app-ap-southeast-1b",
              "Project": "need-a-sidekick",
              "Tier": "private-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-private-app-ap-southeast-1b",
              "Project": "need-a-sidekick",
              "Tier": "private-app"
            },
            "vpc_id": "vpc-08221316b975101bd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "981629166163",
            "id": "subnet-0cf37672b89b06a40",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:981629166163:subnet/subnet-094ec38a2eec57f5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094ec38a2eec57f5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "981629166163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-private-data-ap-southeast-1a",
              "Project": "need-a-sidekick",
              "Tier": "private-data"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-private-data-ap-southeast-1a",
              "Project": "need-a-sidekick",
              "Tier": "private-data"
            },
            "vpc_id": "vpc-08221316b975101bd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "981629166163",
            "id": "subnet-094ec38a2eec57f5b",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:981629166163:subnet/subnet-037dfc54c6d1b7df8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037dfc54c6d1b7df8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "981629166163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-private-data-ap-southeast-1b",
              "Project": "need-a-sidekick",
              "Tier": "private-data"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-private-data-ap-southeast-1b",
              "Project": "need-a-sidekick",
              "Tier": "private-data"
            },
            "vpc_id": "vpc-08221316b975101bd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "981629166163",
            "id": "subnet-037dfc54c6d1b7df8",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:981629166163:subnet/subnet-0dbed88dc6a394a1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dbed88dc6a394a1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "981629166163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-public-ap-southeast-1a",
              "Project": "need-a-sidekick",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-public-ap-southeast-1a",
              "Project": "need-a-sidekick",
              "Tier": "public"
            },
            "vpc_id": "vpc-08221316b975101bd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "981629166163",
            "id": "subnet-0dbed88dc6a394a1a",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:981629166163:subnet/subnet-0ce5334966df14eb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce5334966df14eb1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "981629166163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-public-ap-southeast-1b",
              "Project": "need-a-sidekick",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-public-ap-southeast-1b",
              "Project": "need-a-sidekick",
              "Tier": "public"
            },
            "vpc_id": "vpc-08221316b975101bd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "981629166163",
            "id": "subnet-0ce5334966df14eb1",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:981629166163:vpc/vpc-08221316b975101bd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c6ac0c8499a75431",
            "default_route_table_id": "rtb-097c7bac482c5601c",
            "default_security_group_id": "sg-0298b309fe9c4b9ce",
            "dhcp_options_id": "dopt-0f870575b2b7f2eb3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08221316b975101bd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-097c7bac482c5601c",
            "owner_id": "981629166163",
            "region": "ap-southeast-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-vpc",
              "Project": "need-a-sidekick"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-vpc",
              "Project": "need-a-sidekick"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "981629166163",
            "id": "vpc-08221316b975101bd",
            "region": "ap-southeast-1"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:981629166163:vpc-endpoint/vpce-06a77341f2bb3b121",
            "cidr_blocks": [
              "35.71.118.0/25",
              "52.94.11.0/24",
              "35.71.118.128/26"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06a77341f2bb3b121",
            "ip_address_type": "ipv4",
            "owner_id": "981629166163",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-67a5400e",
            "private_dns_enabled": false,
            "region": "ap-southeast-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0c38cbe8014e53276",
              "rtb-0f78bbe0adbba0989"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.dynamodb",
            "service_region": "ap-southeast-1",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-dynamodb-endpoint",
              "Project": "need-a-sidekick"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-dynamodb-endpoint",
              "Project": "need-a-sidekick"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-08221316b975101bd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "981629166163",
            "id": "vpce-06a77341f2bb3b121",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private_app",
            "aws_route_table.private_data",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:981629166163:vpc-endpoint/vpce-053e77772e90d76e6",
            "cidr_blocks": [
              "52.219.32.0/21",
              "3.5.146.0/23",
              "3.5.148.0/22",
              "52.219.40.0/22",
              "52.219.124.0/22",
              "52.219.128.0/21",
              "52.219.184.0/21",
              "16.12.48.0/21",
              "52.219.164.0/22",
              "52.219.180.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-053e77772e90d76e6",
            "ip_address_type": "ipv4",
            "owner_id": "981629166163",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6fa54006",
            "private_dns_enabled": false,
            "region": "ap-southeast-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0c38cbe8014e53276",
              "rtb-0f78bbe0adbba0989"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.s3",
            "service_region": "ap-southeast-1",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-s3-endpoint",
              "Project": "need-a-sidekick"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "need-a-sidekick-dev-s3-endpoint",
              "Project": "need-a-sidekick"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-08221316b975101bd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "981629166163",
            "id": "vpce-053e77772e90d76e6",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private_app",
            "aws_route_table.private_data",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}